; ModuleID = '/home/carl/AnghaBench/micropython/lib/netutils/extr_netutils.c_netutils_format_inet_addr.c'
source_filename = "/home/carl/AnghaBench/micropython/lib/netutils/extr_netutils.c_netutils_format_inet_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @netutils_format_inet_addr(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [2 x i32], align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds [2 x i32], [2 x i32]* %7, i64 0, i64 0
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @netutils_format_ipv4_addr(i32* %9, i32 %10)
  %12 = getelementptr inbounds [2 x i32], [2 x i32]* %7, i64 0, i64 0
  store i32 %11, i32* %12, align 4
  store i32 %11, i32* %8, align 4
  %13 = getelementptr inbounds i32, i32* %8, i64 1
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @mp_obj_new_int(i32 %14)
  %16 = getelementptr inbounds [2 x i32], [2 x i32]* %7, i64 0, i64 1
  store i32 %15, i32* %16, align 4
  store i32 %15, i32* %13, align 4
  %17 = getelementptr inbounds [2 x i32], [2 x i32]* %7, i64 0, i64 0
  %18 = call i32 @mp_obj_new_tuple(i32 2, i32* %17)
  ret i32 %18
}

declare dso_local i32 @netutils_format_ipv4_addr(i32*, i32) #1

declare dso_local i32 @mp_obj_new_int(i32) #1

declare dso_local i32 @mp_obj_new_tuple(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
